add review location
