# go-server/docs/swagger.json
@@ -1362,6 +1362,75 @@
                 }
             }
         },
+        "/api/v1/reviews/locations": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get reviews locations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "Get reviews locations",
+                "operationId": "getReviewsLocations",
+                "parameters": [
+                    {
+                        "enum": [
+                            "day",
+                            "week",
+                            "month"
+                        ],
+                        "type": "string",
+                        "name": "type",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "value",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/reviews.LocationWithCount"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/main.JSONErrorRes"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/reviews/user/{userId}": {
             "get": {
                 "security": [
@@ -1705,6 +1774,68 @@
                 ],
                 "summary": "Flag a review",
                 "operationId": "flagReview",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "review id",
+                        "name": "reviewId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/main.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/main.JSONErrorRes"
+                        }
+                    },
+                    "404": {
+                        "description": "Review not found",
+                        "schema": {
+                            "$ref": "#/definitions/main.JSONErrorRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/reviews/{reviewId}/unflag": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "unflag a review",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "unflag a review",
+                "operationId": "unflagReview",
                 "parameters": [
                     {
                         "type": "string",
@@ -2284,6 +2415,7 @@
             "required": [
                 "comment",
                 "gameId",
+                "location",
                 "rating"
             ],
             "properties": {
@@ -2294,6 +2426,9 @@
                 },
                 "gameId": {
                     "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/reviews.Location"
                 },
                 "rating": {
                     "type": "integer",
@@ -2336,6 +2471,17 @@
                 }
             }
         },
+        "reviews.LatLng": {
+            "type": "object",
+            "properties": {
+                "lat": {
+                    "type": "number"
+                },
+                "lng": {
+                    "type": "number"
+                }
+            }
+        },
         "reviews.Location": {
             "type": "object",
             "properties": {
@@ -2353,6 +2499,17 @@
                 },
                 "longitude": {
                     "type": "number"
+                }
+            }
+        },
+        "reviews.LocationWithCount": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "location": {
+                    "$ref": "#/definitions/reviews.LatLng"
                 }
             }
         },
@@ -2431,6 +2588,9 @@
                 },
                 "lastUpdatedAt": {
                     "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/reviews.Location"
                 },
                 "rating": {
                     "type": "integer"
